--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - Ely-Anne Guillaume</title>
+  <title>Ely-Anne Guillaume</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 <header>
@@ -13,8 +14,8 @@
       <img src="portrait.jpg" alt="Photo de profil" class="profile-pic">
     </div>
     <div class="text-section">
-      <h1>Ely-Anne Guillaume</h1>
-      <p>Ingénieure réseau & passionnée de cybersécurité</p>
+      <h1>Bonjour, je suis Ely-Anne</h1>
+      <p>Ingénieure réseaux & passionnée de cybersécurité</p>
       <nav>
         <a href="#about">À propos</a>
         <a href="#projects">Projets</a>
@@ -24,30 +25,43 @@
   </div>
 </header>
 
-
+<div class="box">
+<div>
   <section id="about">
     <h2>À propos</h2>
-    <p>Je suis développeuse junior spécialisée en ...</p>
+    <p>Je m’appelle Ely-Anne Guillaume, fraichement ingénieure diplomée de Télécom SudParis où mon parcours s'est concentré sur le développement web, les réseaux et la cybersécurité.<br>
+Après une année en alternance chez Spie ICS en tant qu’architecte Digital Workplace, j’ai effectué un stage de  mois au Cambodge chez BiKay, où j’ai géré des projets de développement de sites web et d’applications mobiles.<br>
+Curieuse et passionnée par les technologies, j’explore également le domaine de la cybersécurité afin d’enrichir mes compétences et d’élargir mon expertise.<br>
+En dehors du travail, j’aime rester active à travers la danse, le fitness et les activités manuelles, tout en cultivant ma créativité et mon esprit d’analyse dans des projets personnels.</p>
   </section>
+</div>
+<div>
+  <img src="coding.png" alt="Image de codage" class="coding-image" style="width: 45vw; height: auto;">
+</div>
+</div>
 
-  <section id="projects">
+<section id="projects">
     <h2>Mes Projets</h2>
-    <div class="project-card">
-        <h3>Calculatrice JS</h3>
-        <p>Une calculatrice basique en JavaScript.</p>
-        <a href="https://github.com/tonpseudo/calculatrice" target="_blank">Voir sur GitHub</a>
+    <div class="project-section">
+      <div class="project-card">
+          <h3>Calculatrice JS</h3>
+          <p>Une calculatrice basique en JavaScript.</p>
+          <a href="https://github.com/tonpseudo/calculatrice" target="_blank">Voir sur GitHub</a>
+      </div>
+      <div class="project-card">
+          <h3>Calculatrice JS</h3>
+          <p>Une calculatrice basique en JavaScript.</p>
+          <a href="https://github.com/tonpseudo/calculatrice" target="_blank">Voir sur GitHub</a>
+      </div>
+      <div class="project-card">
+        <h3>Nom du projet</h3>
+        <p>Description rapide du projet.</p>
+        <a href="lien_vers_le_projet" target="_blank">Voir le projet</a>
+      </div>
     </div>
-    <div class="project-card">
-        <h3>Calculatrice JS</h3>
-        <p>Une calculatrice basique en JavaScript.</p>
-        <a href="https://github.com/tonpseudo/calculatrice" target="_blank">Voir sur GitHub</a>
-    </div>
-    <div class="project-card">
-      <h3>Nom du projet</h3>
-      <p>Description rapide du projet.</p>
-      <a href="lien_vers_le_projet" target="_blank">Voir le projet</a>
-    </div>
-  </section>
+</section>
+
+
 
   <section id="contact">
     <h2>Contact</h2>
