--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ En dehors du travail, j’aime rester active à travers la danse, le fitness et 
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email : <a href="mailto:ely-anneguillaume@outlook.fr">ely-anneguillaume@outlook.fr</a></p>
-    <p>LinkedIn : <a href="https://linkedin.com/in/ely-anne-guillaume" target="_blank">Mon LinkedIn</a></p>
-    <p>GitHub : <a href="https://github.com/ElyGuill" target="_blank">Mon GitHub</a></p>
+    <a href="mailto:ely-anneguillaume@outlook.fr"><img src="email.png" alt="emailLogo" style="width: 50px; height: auto;"></a>
+    <a href="https://linkedin.com/in/ely-anne-guillaume" target="_blank"><img src="linkedin.png" alt="linkedinLogo" style="width: 50px; height: auto;"></a>
+    <a href="https://github.com/ElyGuill" target="_blank"><img src="github.png" alt="githubLogo" style="width: 50px; height: auto;"></a>
   </section>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon">
